--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 			<div class="carousel-caption">
 				<h1 class="display-2">Website</h1>
 				<h3>Complete Website Layout</h3>
-				<button type="button" class="btn btn-outline-light btn-lg">VIEW
+				<button type="button" class="btn btn-outline-light btn-lg" onclick="window.location.href='https://youtu.be/BsDoLVMnmZs';">VIEW
 				DEMO</button>
-				<button type="button" class="btn btn-primary btn-lg">Get Started</button>
+				<button type="button" class="btn btn-primary btn-lg" onclick="window.location.href='https://w3docs.com';">Get Started</button>
 			</div>
 		</div>
 		<div class="carousel-item">
